--- a/segitiga.html
+++ b/segitiga.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kursus Bandar | Kumpulan Rumus Bangun Datar</title>
+  <title>Kursus Bandar | Segitiga</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 </head>
 <body>
   <header>
